--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,15 @@
 @import 'tailwindcss';
 
+@theme {
+	--color-primary: #31d843;
+	--color-secondary: #2e394d;
+	--color-accent: #f1807e;
+}
+
+button {
+	cursor: pointer;
+}
+
 :root {
 	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
