Welcome page done and code cleanup

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
 @theme {
 	--color-primary: #31d843;
 	--color-secondary: #2e394d;
-	--color-accent: #f1807e;
+	--color-accent: #fc9f5b;
 }
 
 button {
